Fix lịch sự đặt sách thêm số lượng và ngày đặt lích